Fix TimeUnits overlap for dark-theme
The TimeUnits margin-left definition was causing the right border
of the select to overlap.

The width definition was removed since it was being overridden by
the new theme style.  Since they are both carry over from the old
theme they were safe to remmove.

--- a/share/static/css/elevator-light/forms.css
+++ b/share/static/css/elevator-light/forms.css
@@ -155,11 +155,6 @@ div.widget .hints {
     }
 }
 
-.value .TimeUnits{
-    margin-left: .5em;
-    width: 7em;
-}
-
 .cfinvalidfield {
     font-style: italic;
     color: red;
